--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,17 @@
-spring.datasource.url=jdbc:mysql://localhost/birthday
+server.port=3333
+
+spring.datasource.url=jdbc:mysql://localhost:3306/birthday>userSSL=false
 spring.datasource.username=
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+server.servlet.context-path=/birthday
+
+spring.jpa.show.sql=true
+
+spring.jpa.properties.hibernate.format_sql=true
+server.error.whitelabel.enabled=false
+logging.level.org.hibernate.type=info
+
+spring.jpa.properties.hibernate.show_sql: true
+
+
