--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>birthdayBE</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>birthdayBE</name>
-    <description>birthdayBE</description>
+    <description>Birthday project API backend</description>
     <properties>
         <java.version>17</java.version>
     </properties>
