--- a/pom.xml
+++ b/pom.xml
@@ -56,11 +56,11 @@
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
 
-        <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
+<!--        <dependency>-->
+<!--            <groupId>mysql</groupId>-->
+<!--            <artifactId>mysql-connector-java</artifactId>-->
 
-        </dependency>
+<!--        </dependency>-->
 
     </dependencies>
 
